--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Site.Title }}</title>
     <meta name="description" content="{{ .Site.Params.description }}">
+	<meta name="keywords" content="{{ .Site.Params.keywords }}">
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.googleAnalytics }}"></script>
 	<script>
@@ -334,6 +335,7 @@
                 <p>&copy; {{ now.Format "2006" }} {{ .Site.Params.author }}. All rights reserved.</p>
             </div>
         </div>
+		<p></p>
     </footer>
 
     <script>
