Added ToC line item for newly added Appendix 6

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -108,6 +108,7 @@
                             <li>परिशिष्ट 3 - छमाही पॉडकास्ट समृद्धि योजना</li>
                             <li>परिशिष्ट 4 - भारतीय पॉडकास्टर्स के लिए कानूनी परामर्श</li>
                             <li>परिशिष्ट 5 - पॉडकास्टर्स के लिए 50 सबसे लोकप्रिय मुफ़्त या ओपन सोर्स टूल</li>
+							<li>परिशिष्ट 6 - पॉडकास्टर्स के लिए Generative AI स्मार्ट प्रॉम्पट्स</li>
                         </ul>
                     </div>
                     <div class="sample">
