Base URL corrected

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -188,7 +188,7 @@
                     </div>
                     <div class="format">
                         <div class="format-icon"><i class="fas fa-tablet-alt"></i></div>
-                        <h3>eBook</h3>
+                        <h3>Kindle eBook</h3>
                         <p class="price">₹399</p>
                         <a href="https://www.amazon.in/dp/B0F7HVDVHD" class="btn btn-secondary">Amazon &nbsp;<i class="fas fa-external-link-alt"></i></a>
                     </div>
