Added Flipbook Iframe for Preview

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -115,12 +115,13 @@
                     <div class="sample">
                         <h3>अंश पढ़ें</h3>
                         <div class="sample-content">
+						    <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/a41b34a141.html" style="border: 1px solid lightgray; width: 100%; height: 400px;"></iframe><br> 
                             <p><strong>प्राक्कथन</strong> से</p>
                             <blockquote>
-                                <p>"वे दिन बीत चुके हैं जब केवल रेडियो स्टेशन ये तय करते थे कि किसे सुना जाएगा। आज, एक लैपटॉप, एक बुनियादी माइक्रोफोन (या यहां तक कि आपका फोन भी), और निशुल्क उपकरणों के साथ, आप अपना स्वयं का निजी रेडियो ब्रॉडकास्टिंग नुमा प्रकल्प बना सकते हैं। चाहे आप उद्यमिता, मानसिक स्वास्थ्य, बॉलीवुड की गॉसिप, या क्रिकेट पर चर्चा करना चाहते हों, पॉडकास्टिंग आपको एक व्यापक मंच प्रदान करती है। और इसे सुनने वालों की तादाद करोड़ों में है। केवल अंग्रेजी नहीं, बल्कि हर देशीय व प्रांतीय भाषा में।</p>
-                                <p>पॉडकास्ट सिर्फ़ सात सालों में रेडियो जितना ही लोकप्रिय हो गये हैं। दरअसल 13-64 वर्ष की आयु के लोगों के लिए, पॉडकास्ट अब रेडियो से ज़्यादा लोकप्रिय हैं। दुनिया भर में अब 42 लाख से ज़्यादा पॉडकास्ट हैं, जिनमें हर तीन दिन में एक लाख से ज़्यादा नए पॉडकास्ट प्रकाशित होते हैं। 2023 में 45 करोड़ से ज़्यादा लोगों ने पॉडकास्ट सुना, और 2026 तक यह संख्या 62 करोड़ तक पहुँचने की उम्मीद है। भारत में लगभग 2.5 करोड़ लोग प्रतिदिन कम से कम एक पॉडकास्ट सुनते हैं। साथ ही, पॉडकास्ट सुनने में प्रति सप्ताह बिताया जाने वाला औसत समय लगभग 7.5 घंटे है।"</p>
+                                <p>"वे दिन बीत चुके हैं जब केवल रेडियो स्टेशन ये तय करते थे कि किसे सुना जाएगा। आज, एक लैपटॉप, एक बुनियादी माइक्रोफोन, Smartphone और निशुल्क उपकरणों के साथ, आप अपना स्वयं का निजी रेडियो ब्रॉडकास्टिंग नुमा प्रकल्प बना सकते हैं। चाहे आप उद्यमिता, मानसिक स्वास्थ्य, बॉलीवुड की गॉसिप, या क्रिकेट पर चर्चा करना चाहते हों, पॉडकास्टिंग आपको एक व्यापक मंच प्रदान करती है। और इसे सुनने वालों की तादाद करोड़ों में है। केवल अंग्रेजी नहीं, बल्कि हर देशीय व प्रांतीय भाषा में।</p>
+                              <!--  <p>पॉडकास्ट सिर्फ़ सात सालों में रेडियो जितना ही लोकप्रिय हो गये हैं। दरअसल 13-64 वर्ष की आयु के लोगों के लिए, पॉडकास्ट अब रेडियो से ज़्यादा लोकप्रिय हैं। दुनिया भर में अब 42 लाख से ज़्यादा पॉडकास्ट हैं, जिनमें हर तीन दिन में एक लाख से ज़्यादा नए पॉडकास्ट प्रकाशित होते हैं। 2023 में 45 करोड़ से ज़्यादा लोगों ने पॉडकास्ट सुना, और 2026 तक यह संख्या 62 करोड़ तक पहुँचने की उम्मीद है। भारत में लगभग 2.5 करोड़ लोग प्रतिदिन कम से कम एक पॉडकास्ट सुनते हैं। साथ ही, पॉडकास्ट सुनने में प्रति सप्ताह बिताया जाने वाला औसत समय लगभग 7.5 घंटे है।"</p> -->
                             </blockquote>
-                            <a href="https://publish.pothi.com/preview/?sku=SKU29135" class="sample-link" target="_blank">पुस्तक के और मुफ्त अंश पढ़ें</a>
+                            <!--<a href="https://publish.pothi.com/preview/?sku=SKU29135" class="sample-link" target="_blank">पुस्तक के और मुफ्त अंश पढ़ें</a> -->							
                         </div>
                     </div>
                 </div>
