--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,10 @@
 {{ define "main" }}
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ .Site.Params.googleTagManager }}"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	
     <header class="site-header">
         <div class="container">
             <nav class="main-nav">
