--- a/layouts/index.html
+++ b/layouts/index.html
@@ -197,25 +197,25 @@
                         <div class="format-icon"><i class="fas fa-book"></i></div>
                         <h3>Paperback</h3>
                         <p class="price">₹399</p>
-                        <a href="https://www.flipkart.com/podcasting-kaise-karein-naye-podcasters-ke-liye-sampoorna-maargdarshikaa/p/itm09701e0288dd5?pid=9789334292398" class="btn btn-secondary" id="flipkart-paperback">>Flipkart</a>
+                        <a href="https://www.flipkart.com/podcasting-kaise-karein-naye-podcasters-ke-liye-sampoorna-maargdarshikaa/p/itm09701e0288dd5?pid=9789334292398" class="btn btn-secondary" id="flipkart-paperback">Flipkart</a>
                     </div>
                     <div class="format">
                         <div class="format-icon"><i class="fas fa-book"></i></div>
                         <h3>Paperback</h3>
                         <p class="price">₹399</p>
-                        <a href="https://store.pothi.com/book/debashish-chakrabarty-%E0%A4%AA%E0%A5%89%E0%A4%A1%E0%A4%95%E0%A4%BE%E0%A4%B8%E0%A5%8D%E0%A4%9F%E0%A4%BF%E0%A4%82%E0%A4%97-%E0%A4%95%E0%A5%88%E0%A4%B8%E0%A5%87-%E0%A4%95%E0%A4%B0%E0%A5%87%E0%A4%82/" class="btn btn-secondary" id="pothi-paperback">>Pothi.com</a>
+                        <a href="https://store.pothi.com/book/debashish-chakrabarty-%E0%A4%AA%E0%A5%89%E0%A4%A1%E0%A4%95%E0%A4%BE%E0%A4%B8%E0%A5%8D%E0%A4%9F%E0%A4%BF%E0%A4%82%E0%A4%97-%E0%A4%95%E0%A5%88%E0%A4%B8%E0%A5%87-%E0%A4%95%E0%A4%B0%E0%A5%87%E0%A4%82/" class="btn btn-secondary" id="pothi-paperback">Pothi.com</a>
                     </div>
                     <div class="format">
                         <div class="format-icon"><i class="fas fa-tablet-alt"></i></div>
                         <h3>Kindle</h3>
                         <p class="price">₹399</p>
-                        <a href="https://www.amazon.in/dp/B0F7HVDVHD" class="btn btn-secondary" id="amazon-kindle">>Amazon</a>
+                        <a href="https://www.amazon.in/dp/B0F7HVDVHD" class="btn btn-secondary" id="amazon-kindle">Amazon</a>
                     </div>
                     <div class="format">
                         <div class="format-icon"><i class="fas fa-tablet-alt"></i></div>
                         <h3>eBook</h3>
                         <p class="price">$4.99</p>
-                        <a href="https://leanpub.com/how-to-podcast-hindi-guide/" class="btn btn-secondary" id="leanpub-ebook">>Leanpub</a>
+                        <a href="https://leanpub.com/how-to-podcast-hindi-guide/" class="btn btn-secondary" id="leanpub-ebook">Leanpub</a>
                     </div>
                 </div>                
                 <div class="guarantee">
